--- a/package.json
+++ b/package.json
@@ -9,10 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.11",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^6.1.15",
+    "@react-navigation/native-stack": "^6.9.23",
+    "@react-navigation/stack": "^6.3.28",
+    "expo": "^49.0.23",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-native": "0.73.4",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "^3.8.0",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-navigation": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
