--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-navigation/native": "^6.1.15",
-    "@react-navigation/native-stack": "^6.9.23",
+    "@react-navigation/native": "^6.1.16",
+    "@react-navigation/native-stack": "^6.9.25",
     "@react-navigation/stack": "^6.3.28",
     "expo": "^49.0.23",
-    "expo-status-bar": "~1.11.1",
+    "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.73.4",
+    "react-native": "0.72.10",
     "react-native-gesture-handler": "~2.12.0",
-    "react-native-reanimated": "^3.8.0",
-    "react-native-safe-area-context": "^4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "^4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-navigation": "^5.0.0"
   },
   "devDependencies": {
