--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "react": "18.2.0",
     "react-native": "0.72.10",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-image-slider-box": "^2.0.7",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-vector-icons": "^10.0.3",
     "react-navigation": "^5.0.0"
   },
   "devDependencies": {
