--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^6.1.16",
     "@react-navigation/native-stack": "^6.9.25",
     "@react-navigation/stack": "^6.3.28",
+    "axios": "^1.6.8",
     "expo": "^49.0.23",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
