Add Platform check for StatusBar marginTop in App.js

--- a/app.json
+++ b/app.json
@@ -21,10 +21,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.jaypatel01.UrbanUtopia"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "c79caf31-c454-4f36-8ff8-abab8d212d40"
+      }
     }
   }
 }
